# NLPBench

./: .gitignore  CLAUDE.md  Makefile  README.md  example.json  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: __init__.py  config.py  dataset_loader.py  diversity_metrics.py  great_expectations_utils.py  kaggle_loader.py  main.py  models.py  quality_checker.py  report_generator.py
tests/: test_diversity_metrics.py  test_enhanced_quality_checker.py  test_great_expectations_integration.py  test_quality.py
